# voxlyn-ai

./: .gitignore  LICENSE  README.md  TODO.md  assistant.py  assistant_daemon.py  assistant_local.py  assistant_trigger.py  assistant_vibe.py  daemon.py  dictate.py  mempalace_helper.py  mempalace_memory.py  opencode_client.py  pyproject.toml  requirements.txt  trigger.py  voice-assistant.service  voxlyn-ai.service
.opencode/skills/control-sistema/: SKILL.md
.opencode/skills/info-sistema/: SKILL.md
.opencode/skills/mempalace/: SKILL.md
.opencode/skills/notas-rapidas/: SKILL.md
.opencode/skills/quick-notes/: SKILL.md
.opencode/skills/recordatorios/: SKILL.md
.opencode/skills/reminders/: SKILL.md
.opencode/skills/remote-diagnostics/: SKILL.md
.opencode/skills/remote-maintenance/: SKILL.md
.opencode/skills/remote-security/: SKILL.md
.opencode/skills/rpi-diagnostics/: SKILL.md
.opencode/skills/rpi-maintenance/: SKILL.md
.opencode/skills/rpi-security/: SKILL.md
.opencode/skills/system-control/: SKILL.md
.opencode/skills/system-info/: SKILL.md
.opencode/skills/web-search/: SKILL.md
docs/: multi-turn-followup.md
tests/: test_commands.py  test_memory.py  test_opencode_client.py  test_transcription.py  test_utils.py  test_utils_extended.py
voice_assistant/: __init__.py  audio.py  commands.py  config.py  llm.py  local_cli.py  memory.py  router.py  transcription.py  utils.py
