[project]
name = "voxlyn-ai"
version = "0.2.0"
description = "Hands-free AI voice assistant for Linux. Whisper STT, OpenCode LLM, Piper TTS, persistent daemon with agent skills."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
