[project]
name = "voxlyn-ai"
version = "0.2.0"
description = "Hands-free AI voice assistant for Linux. Whisper STT, OpenCode LLM, Piper TTS, persistent daemon with agent skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "kokoro>=0.9.4",
    "numpy",
    "requests",
    "sounddevice",
    "soundfile",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
